[gd_scene load_steps=8 format=3 uid="uid://bcwbptqi3ur6a"]

[ext_resource type="Texture2D" uid="uid://wi6lyr2m55nl" path="res://assets/sprites/Malo/Boss_Sin_Fondo.png" id="1_dlyeq"]
[ext_resource type="Script" path="res://scenes/game/enemy/Script_node_2d_boss.gd" id="1_jlj6q"]
[ext_resource type="Texture2D" uid="uid://bmi3uko8mfudp" path="res://assets/sprites/Malo/fireball.png" id="2_tu0dc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vy71"]
size = Vector2(117.25, 561)

[sub_resource type="Animation" id="Animation_3c0gh"]
resource_name = "MoverBrazo"
length = 5.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSinFondo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(903, 392), Vector2(896, 357), Vector2(891, 335), Vector2(933, 337), Vector2(943, 362), Vector2(877, 399)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 1.3, 2.2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"lanzarBOMBA1"
}, {
"args": [],
"method": &"lanzarBOMBA2"
}, {
"args": [],
"method": &"lanzarBOMBA3"
}, {
"args": [],
"method": &"lanzarBOMBA4"
}]
}

[sub_resource type="Animation" id="Animation_unw7w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSinFondo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(903, 392)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0u854"]
_data = {
"MoverBrazo": SubResource("Animation_3c0gh"),
"RESET": SubResource("Animation_unw7w")
}

[node name="Node2D_Boss" type="StaticBody2D"]
script = ExtResource("1_jlj6q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(970, 313)
shape = SubResource("RectangleShape2D_1vy71")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0u854")
}
autoplay = "MoverBrazo"

[node name="BossSinFondo" type="Sprite2D" parent="."]
position = Vector2(903, 392)
texture = ExtResource("1_dlyeq")

[node name="Fireball" type="Sprite2D" parent="."]
visible = false
position = Vector2(852, 363)
rotation = -3.14159
scale = Vector2(2, -2)
texture = ExtResource("2_tu0dc")
hframes = 4

[node name="Fireball2" type="Sprite2D" parent="."]
visible = false
position = Vector2(882, 378)
rotation = -3.14159
scale = Vector2(2, -2)
texture = ExtResource("2_tu0dc")
hframes = 4

[node name="Fireball3" type="Sprite2D" parent="."]
visible = false
position = Vector2(913, 370)
rotation = -3.14159
scale = Vector2(2, -2)
texture = ExtResource("2_tu0dc")
hframes = 4

[node name="Fireball4" type="Sprite2D" parent="."]
visible = false
position = Vector2(868, 401)
rotation = -3.14159
scale = Vector2(2, -2)
texture = ExtResource("2_tu0dc")
hframes = 4
